--- a/common.cfg
+++ b/common.cfg
@@ -10,7 +10,8 @@ cc = Obj(
 link = Obj(
   tool='clang-3.5',
   flags=[ '-pthread' ],
-  libs=[ 'stdc++' ]
+  libs=[ 'stdc++' ],
+  lib_dirs=[]
 )
 
 make = Obj(
