--- a/common.cfg
+++ b/common.cfg
@@ -4,7 +4,8 @@ cc = Obj(
           '-Wno-c++98-compat',  '-Wno-shadow',
           '-Wno-global-constructors', '-Wno-exit-time-destructors',
           '-Wno-padded', '-Wno-weak-vtables' ],
-  hdrs_flags=[ '-MM', '-MG' ]
+  hdrs_flags=[ '-MM', '-MG' ],
+  incl_dirs=[]
 )
 
 link = Obj(
