--- a/common.cfg
+++ b/common.cfg
@@ -12,6 +12,7 @@ link = Obj(
   tool='clang-3.5',
   flags=[ '-pthread' ],
   libs=[ 'stdc++' ],
+  static_libs=[ 'boost_filesystem' ],
   lib_dirs=[]
 )
 
