Replace symlink with ib.bat for windows Fix ib path macros for windows dont use symlink Fix error causing windows to not follow headers when using clang Assume cfg_root is the cfg directory if cfg param has a dirname and cfg_root was not explicity provided Move all configs to cfgs folder Add clang, gcc, mingw, and native windows configs Add docker container for testing configs in linux container Add scripts for testing configs in docker

--- a/cfgs/win_common.cfg
+++ b/cfgs/win_common.cfg
@@ -1,10 +1,26 @@
+import common
+
 cc = Obj(
   tool='clang',
   flags=[
-    '-Xclang',
-    '--dependent-lib=msvcrtd',
-    '-Xclang',
-    '--dependent-lib=oldnames'
+    '-fdiagnostics-format=msvc',
+    '-target',
+    'amd64-pc-windows-msvc',
+    '-Wall',
+    '-fno-strict-aliasing',
+    '-fexceptions',
+    '-fstack-protector',
+    '-fpic',
+    '-fno-short-enums',
+    '-frtti',
+    '-x',
+    'c++',
+    '-fno-ms-compatibility',
+    '-fms-extensions',
+    '-fno-delayed-template-parsing',
+    '-D', '_MBCS',
+    '-D', '_MT',
+    '-D', '_DLL'
   ],
   hdrs_flags=[
     '-MM',
@@ -28,12 +44,10 @@ link = Obj(
   lib_flag_prefix='',
   flags=[
     '/ERRORREPORT:PROMPT',
-    '/INCREMENTAL',
     '/NOLOGO',
     '/MANIFEST',
     '/MANIFESTUAC:"level=\'asInvoker\' uiAccess=\'false\'"',
     '/manifest:embed',
-    '/DEBUG:FASTLINK',
     '/TLBID:1',
     '/DYNAMICBASE',
     '/NXCOMPAT',
@@ -51,15 +65,10 @@ link = Obj(
     'oleaut32.lib',
     'uuid.lib',
     'odbc32.lib',
-    'odbccp32.lib'
+    'odbccp32.lib',
+    'OpenGL32.lib',
+    'GLu32.lib'
   ],
   static_libs=[],
   lib_dirs=[]
-)
-
-make = Obj(
-  tool='make',
-  flags=[ '-s' ],
-  force_flag='-B',
-  all_pseudo_target='all'
 )
