Add common libs to mingw_common Merge win_hello.cc and mingw_win_hello.cc

--- a/cfgs/mingw_common.cfg
+++ b/cfgs/mingw_common.cfg
@@ -1,3 +1,22 @@
-link.libs = []
-link.static_libs = ['stdc++']
+cc.flags += [
+  '-static-libgcc',
+  '-static-libstdc++'
+]
+link.libs = [
+  'kernel32',
+  'user32',
+  'gdi32',
+  'winspool',
+  'comdlg32',
+  'advapi32',
+  'shell32',
+  'ole32',
+  'oleaut32',
+  'uuid',
+  'odbc32',
+  'odbccp32',
+  'opengl32',
+  'glu32'
+]
+link.static_libs = ['stdc++', 'pthread']
 link.flags += ['-static-libgcc', '-static-libstdc++']
