Move ib to an ib.py file Convert ib project into a package to be imported Add test for Cfg constructor Run tests and build examples in Dockerfile Add ./scripts/run_tests_in_docker.sh

--- a/cfgs/common.cfg
+++ b/cfgs/common.cfg
@@ -1,8 +1,11 @@
 cc = Obj(
-  flags=[ '--std=c++14' ],
+  flags=[ '--std=c++14', '-x', 'c++' ],
   hdrs_flags=[ '-MM', '-MG' ],
   incl_dirs=[]
 )
+
+has_env = 'INCL_ENV_VAR' in os.environ
+cc.incl_dirs += [os.environ['INCL_ENV_VAR']] if has_env else []
 
 link = Obj(
   flags=[ ],
