Add high level tests for Planner

--- a/cfgs/common.cfg
+++ b/cfgs/common.cfg
@@ -1,5 +1,5 @@
 cc = Obj(
-  flags=[ '--std=c++14', '-x', 'c++' ],
+  flags=[ '--std=c++14', '-x', 'c++', '-fPIC' ],
   hdrs_flags=[ '-MM', '-MG' ],
   incl_dirs=[]
 )
